--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
         <div class="contact-text">
             <h6 class="pt-3">Prof. Rama Krishna Murthy</h6>
             <p><a href="tel:+(91) 8341 831 081">+(91) 8341 831 081</a></p>
-             <h6>Mr. Madhu Sudhan</h6>
+             <h6>Mr. K. Madhu Sudhan</h6>
             <p><a href="tel:+(91) 9553 393 838">+(91) 9553 393 838</a></p>
             <h6>Mr. Ravindranath</h6>
             <p><a href="tel:+(91) 9553 703 364">+(91) 9553 703 364</a></p>
