--- a/department.html
+++ b/department.html
@@ -170,7 +170,7 @@
                 <p>
                     Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
                 </p>
-                <a href="https://anits.edu.in/#" target="_blank">
+                <a href="https://cse.anits.edu.in/" target="_blank">
                     <button class="btn btn-primary">
                         Read More
                     </button>
@@ -192,9 +192,9 @@
           </div>
           <div class="college-description">
               <p>
-                  Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-              </p>
-              <a href="https://anits.edu.in/#" target="_blank">
+                Information technology has become a part of our everyday lives, which is a great impact on our society.
+                This Course especially focuses on the application in various information Technologies which meet Industry requirements and administrative systems having importance in Globalization Communication, arise in new jobs.              </p>
+              <a href="https://it.anits.edu.in/" target="_blank">
                   <button class="btn btn-primary">
                       Read More
                   </button>
@@ -218,9 +218,8 @@
             </div>
             <div class="college-description">
                 <p>
-                    Anil Neerukonda Institute of Technology & Sciences (ANITS), Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL) which is one of the top infrastructure and manufacturing company in India with headquarters at Hyderabad. The institute was established in the academic year 2001-02 by Anil Neerukonda Educational Society (ANES) which was founded by Dr. N.B.R. Prasad, an NRI Philanthropist from the USA, with industrialists and eminent educationists in memory of Late Anil Neerukonda, S/o. Dr. N.B.R. Prasad.
-                </p>
-                <a href="https://anits.edu.in/#" target="_blank">
+                  At ANITS, the education in Computer Science and Engineering with specialization of AI&amp;ML,Data Science will provide you with the understanding and knowledge to grasp the drastic changing in technologies that impact your fascinating field. The undergraduate program is designed to reinforce student’s educational breadth with specialized areas such as Discrete Mathematical Structures, Digital Logic and Design, Design thinking and product Innovation,Data structures and Algorithms, Object Oriented Programming, Database Management systems,Artificial Intelligence,Machine Learning, Deep Learning , Network Security and Cryptography, Computer Graphics, web Technologies, Data Science, Introduction To Competitive Coding etc.                </p>
+                <a href="https://cseaimlds.anits.edu.in/" target="_blank">
                     <button class="btn btn-primary">
                         Read More
                     </button>
