--- a/technical.html
+++ b/technical.html
@@ -159,16 +159,10 @@
     <div class="col-lg-8">
       <div class="mb-4 mt-5">
         <h4 class="mb-3 border-bottom pb-3">Technical Programme Committee</h4>
-        <p style="font-size: larger;">........
-        </p>
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
-        <p style="font-size: larger;">........
-        </p> 
+        <p style="font-size: larger;">Dr. Naeem Hannon, University Technology Mara.</p>
+        <p style="font-size: larger;">Prof. K. Venkata Rao, Dept. of CS&SE, A.U.</p>
+        <p style="font-size: larger;">Prof. D. Lalitha Bhaskari, Dept. of CS&SE, A.U.</p>
+        <p style="font-size: larger;">Prof. Y. Srinivas, GITAM University, Dept. of CSE</p>
       </div>
       
 
