--- a/organizing.html
+++ b/organizing.html
@@ -199,7 +199,7 @@
       </div>
       <div class="mb-4 mt-5">
         <h4 class="mb-3 border-bottom pb-3">Website Committee</h4>
-        <p style="font-size: larger;">Mr. K. Madhusudhan, Assistant Professor, IT, ANITS
+        <p style="font-size: larger;">Mr. B. Madhusudhana Rao, Assistant Professor, IT, ANITS
         </p>
         <p style="font-size: larger;">Mr. G. Ravindranath, Assistant Professor, IT, ANITS
         </p> 
