--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     <i class="fas fa-microphone"></i>
                     <h4 class="mt-3 mb-3">About the Conference</h4>
                     <div class="divider"></div>
-                    <p>The aim of the 6th International Conference on Smart Computing and Informatics (SCI-2022) is to present a unified platform for advanced and multi-disciplinary research towards the design of smart computing and informatics. The theme is on a broader front focuses on various innovation paradigms in system knowledge, intelligence and sustainability that may be applied to provide realistic solutions to varied problems in society, environment and industries. The scope is also extended towards the deployment of emerging computational and knowledge transfer approaches, optimizing solutions in various disciplines of science, technology and healthcare. The conference proceeding aims the publication of quality and unpublished work.</p>
+                    <p>The aim of the 6th International Conference on Smart Computing and Informatics (SCI-2024) is to present a unified platform for advanced and multi-disciplinary research towards the design of smart computing and informatics. The theme is on a broader front focuses on various innovation paradigms in system knowledge, intelligence and sustainability that may be applied to provide realistic solutions to varied problems in society, environment and industries. The scope is also extended towards the deployment of emerging computational and knowledge transfer approaches, optimizing solutions in various disciplines of science, technology and healthcare. The conference proceeding aims the publication of quality and unpublished work.</p>
                 </div>
             </div>
             
@@ -321,7 +321,7 @@
                 <div class="content">
                   <h3 class="mb-3">Submission of Full Manuscript</h3>
                   <!-- <span class="h6 ">By Goutham</span> -->
-                  <p>13 May 2023</p>
+                  <p>21st December, 2023</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/sofm.jpg" alt="" class="img-fluid">
@@ -333,7 +333,7 @@
                 <div class="content">
                   <h3 class="mb-3">Notification of Acceptance</h3>
                   <!-- <span class="h6">By Goutham</span> -->
-                  <p>15 june 2023</p>
+                  <p>25th January, 2024</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/noa.jpg" alt="" class="img-fluid">
@@ -344,7 +344,7 @@
                 <div class="content">
                   <h3 class="mb-3">Registration</h3>
                   <!-- <span class="h6 ">By Goutham</span> -->
-                  <p>20 july 2023</p>
+                  <p>15th February, 2024</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/reg.jpg" alt="" class="img-fluid">
@@ -356,7 +356,7 @@
                 <!-- <h4 class="time text-color"></h4> -->
                 <div class="content">
                   <h3 class="mb-3">Final Submissions</h3>
-                  <p>16 August 2023</p>
+                  <p>*********</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/finalsub.jpg" alt="" class="img-fluid">
@@ -367,7 +367,7 @@
                 <!-- <h4 class="time text-color"></h4> -->
                 <div class="content">
                   <h3 class="mb-3">Release of schedule of the Conference</h3>
-                  <p>25 September 2023</p>
+                  <p>********</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/rsc.jpg" alt="" class="img-fluid">
@@ -379,7 +379,7 @@
                 <div class="content">
                   <h3 class="mb-3 ">Conference Dates</h3>
                   <!-- <span class="h6">By Goutham</span> -->
-                  <p>20-23 November 2023</p>
+                  <p>20-21 April, 2024</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/confdates.jpg" alt="" class="img-fluid">
@@ -622,7 +622,7 @@
 					</div>
 
 					<div class="speaker-info">
-						<h4 class="mb-0 mt-3"><a href="speaker-single.html">S Goutham</a></h4>
+						<h4 class="mb-0 mt-3"><a href="speaker-single.html">B. Madhusudhana Rao</a></h4>
 						<p>UI designer</p>
 					</div>
 				</div>
@@ -638,7 +638,7 @@
 						</ul>
 					</div>
 					<div class="speaker-info">
-						<h4 class="mb-0 mt-3"><a href="speaker-single.html">N Pradeep</a></h4>
+						<h4 class="mb-0 mt-3"><a href="speaker-single.html">G. Ravindranath</a></h4>
 						<p>UI designer</p>
 					</div>
 
@@ -709,7 +709,7 @@
 						</ul>
 					</div>
 					<div class="speaker-info">
-						<h4 class="mb-0 mt-3"><a href="speaker-single.html">T Yateesh</a></h4>
+						<h4 class="mb-0 mt-3"><a href="speaker-single.html">Ch. Prasad</a></h4>
 						<p>UI designer</p>
 					</div>
 				</div> 
