--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 			<div class="row align-items-center">
         <div style="justify-content: space-between;"></div>
 				<div class="col-lg-10">
-						<h5 class="font-weight-light"><span class="font-weight-bold">ACCREDITED BY NAAC WITH 'A++' GRADE</span> <br>Department of Computer Science and Engineering in AI&ML,DS<br>
+						<h5 class="font-weight-light"><span class="font-weight-bold">ACCREDITED BY NAAC</span> <br>Department of Computer Science and Engineering in AI&ML,DS<br>
               International Conference on Smart Computing and Informatics 
             </h5>
 					</div>
@@ -321,7 +321,7 @@
                 <div class="content">
                   <h3 class="mb-3">Submission of Full Manuscript</h3>
                   <!-- <span class="h6 ">By Goutham</span> -->
-                  <p>21st December, 2023</p>
+                  <p class="date-index">21st December, 2023</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/sofm.jpg" alt="" class="img-fluid">
@@ -333,7 +333,7 @@
                 <div class="content">
                   <h3 class="mb-3">Notification of Acceptance</h3>
                   <!-- <span class="h6">By Goutham</span> -->
-                  <p>25th January, 2024</p>
+                  <p class="date-index">25th January, 2024</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/noa.jpg" alt="" class="img-fluid">
@@ -344,7 +344,7 @@
                 <div class="content">
                   <h3 class="mb-3">Registration</h3>
                   <!-- <span class="h6 ">By Goutham</span> -->
-                  <p>15th February, 2024</p>
+                  <p class="date-index">15th February, 2024</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/reg.jpg" alt="" class="img-fluid">
@@ -356,7 +356,7 @@
                 <!-- <h4 class="time text-color"></h4> -->
                 <div class="content">
                   <h3 class="mb-3">Final Submissions</h3>
-                  <p>*********</p>
+                  <p class="date-index">*********</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/finalsub.jpg" alt="" class="img-fluid">
@@ -367,7 +367,7 @@
                 <!-- <h4 class="time text-color"></h4> -->
                 <div class="content">
                   <h3 class="mb-3">Release of schedule of the Conference</h3>
-                  <p>********</p>
+                  <p class="date-index">********</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/rsc.jpg" alt="" class="img-fluid">
@@ -379,7 +379,7 @@
                 <div class="content">
                   <h3 class="mb-3 ">Conference Dates</h3>
                   <!-- <span class="h6">By Goutham</span> -->
-                  <p>20-21 April, 2024</p>
+                  <p class="date-index">20-21 April, 2024</p>
                 </div>
                 <div class="content-img text-lg-right">
                   <img src="images/about/confdates.jpg" alt="" class="img-fluid">
