--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
 				</div>
 			</div> -->
 
-			<div class="col-lg-4 col-sm-6">
+		<!--	<div class="col-lg-4 col-sm-6">
 				<div class="speaker-block mb-5 mb-lg-0">
 					<div class="img-block">
 						<img src="" alt="images/teams/s-6.jpg" class="img-fluid">
@@ -715,7 +715,7 @@
 				</div> 
 			</div>
 		</div>
-	</div>
+	</div> -->
 </section>
 <!-- Section Start -->
 <section class="section sponsors">
