--- a/college.html
+++ b/college.html
@@ -44,26 +44,44 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
-    <nav class="navbar navbar-expand-lg main-nav">
-        <div class="container">
-       <h5 class="mt-2 mb-2 left-align">6th International Conference on
-         <br>
-         Smart Computing and Informatics
-       </h5>
-            </a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class=""><i class="fas fa-bars"></i>
+  <div class="container">  
+    <div class="row">
+        <div class="anits-logo col-3 d-flex flex-column justify-content-center">
+          <img src="images/clients/anitslogo.jpeg" class="anits-img"/>
+        </div>
+        <div class="conference-text col-6">
+        <h5 class="mt-2 mb-2 heading-conference">6th International Conference on
+          <br>
+          Smart Computing and Informatics
+        </h5>
+        <h4 style="color: rgb(255, 222, 34);">ICSCI 2024</h4>
+        <h5>April 20-21, 2024</h5>
+        <h6>Organized by</h6>
+        <h5>Department of Computer Science and Engineering, <br>Information Technology,<br>Computer Science and Engineering (DS, AI & ML)</h5>
+        </div>
+        <div class="springer-logo-con d-flex flex-column col-3">
+          <img src="images/clients/csi-logo.png" class="springer-logo mt-4"/>  
+          <img src="images/clients/IRC_website_logo.webp" class="springer-logo mb-4 mt-4" />
+          <img src="images/clients/springer.png" class="springer-logo"/>
+          <p class="ml-4 " style="font-size: 15px;">(...Awaiting Approval)</p>
+        </div>
+      </div>
+    </div>
+  <nav class="navbar navbar-expand-lg main-nav">
+    <div class="container">
+ 
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class=""><i class="fas fa-bars"></i>
         </span>
-            </button>
+      </button>
 
-            <!--  MAIN MENU  -->
-            <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
+      <!--  MAIN MENU  -->
+      <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+        <ul class="navbar-nav mx-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
 
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
@@ -76,28 +94,28 @@
            </div>
          </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            For Authors &darr;
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-                            <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-                            <a class="dropdown-item" href="importantdates.html">Important Dates</a>
-                            <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
-                            <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
-                            <a class="dropdown-item" href="schedule.html">Schedule</a>
-                            <a class="dropdown-item" href="registration.html">Registration</a>
-                            <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
-                        </div>
-                    </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              For Authors &darr;
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
+              <a class="dropdown-item" href="importantdates.html">Important Dates</a>
+              <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
+              <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
+              <a class="dropdown-item" href="schedule.html">Schedule</a>
+              <a class="dropdown-item" href="registration.html">Registration</a>
+              <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+            </div>
+          </li>
           <li class="nav-item dropdown">
            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
              Committees &darr;
            </a>
            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-             <a class="dropdown-item" href="committee.html">Committes</a>
+             <a class="dropdown-item" href="committee.html">Committees</a>
              <a class="dropdown-item" href="technical.html">Technical</a>
              <a class="dropdown-item" href="advisory.html">Advisory</a>
              <a class="dropdown-item" href="organizing.html">Organizing</a>
@@ -110,15 +128,15 @@
            <a class="nav-link" href="sessions.html">Spl. Sessions</a>
          </li>
 
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
-                    </li>
-                </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact</a>
+          </li>
+        </ul>
 
-                <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
-            </div>
-        </div>
-    </nav>
+        <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
+      </div>
+    </div>
+  </nav>
 </header>
  <!-- Navigation End -->
 
