--- a/committee.html
+++ b/committee.html
@@ -44,14 +44,32 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
+  <div class="container">  
+    <div class="row">
+        <div class="anits-logo col-3 d-flex flex-column justify-content-center">
+          <img src="images/clients/anitslogo.jpeg" class="anits-img"/>
+        </div>
+        <div class="conference-text col-6">
+        <h5 class="mt-2 mb-2 heading-conference">6th International Conference on
+          <br>
+          Smart Computing and Informatics
+        </h5>
+        <h4 style="color: rgb(255, 222, 34);">ICSCI 2024</h4>
+        <h5>April 20-21, 2024</h5>
+        <h6>Organized by</h6>
+        <h5>Department of Computer Science and Engineering, <br>Information Technology,<br>Computer Science and Engineering (DS, AI & ML)</h5>
+        </div>
+        <div class="springer-logo-con d-flex flex-column col-3">
+          <img src="images/clients/csi-logo.png" class="springer-logo mt-4"/>  
+          <img src="images/clients/IRC_website_logo.webp" class="springer-logo mb-4 mt-4" />
+          <img src="images/clients/springer.png" class="springer-logo"/>
+          <p class="ml-4 " style="font-size: 15px;">(...Awaiting Approval)</p>
+        </div>
+      </div>
+    </div>
   <nav class="navbar navbar-expand-lg main-nav">
     <div class="container">
-       <h5 class="mt-2 mb-2 left-align">6th International Conference on
-         <br>
-         Smart Computing and Informatics
-       </h5>
-      </a>
-
+ 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class=""><i class="fas fa-bars"></i>
@@ -168,18 +186,8 @@
         <p style="font-size: larger;">Prof. K. Sri Ramakrishna, Principal, ANITS</p>
       </div>
       <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Editorial Board Members</h4>
-        <p style="font-size: larger;">Prof. M. Rama Krishna Murthy</p>
-        <p style="font-size: larger;">Dr. Vikrant Bhateja, ECE Dept., Shri Ramswaroop Memorial College of Engineering and Management, Lucknow, U.P., India</p>
-      </div>
-      <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Honarary Chair</h4>
         <p style="font-size: larger;">Prof. P. V. G. D. Prasad Reddy</p>
-      </div>
-      <div class="mb-4">
-        <h4 class="mb-3 border-bottom pb-3">Conference Chairs</h4>
-        <p style="font-size: larger;">Dr. M. Rama Krishna Murthy</p>
-        <p style="font-size: larger;">Prof. M. Rekha Sundari</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">General Chairs</h4>
@@ -187,15 +195,31 @@
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Publication Chairs</h4>
+        <p style="font-size: larger;">Prof. M. Rama Krishna Murthy</p>
+        <p style="font-size: larger;">Dr. Vikrant Bhateja, ECE Dept., Shri Ramswaroop Memorial College of Engineering and Management, Lucknow, U.P., India</p>
+      </div>
+      <div class="mb-4">
+        <h4 class="mb-3 border-bottom pb-3">Conference Chairs</h4>
+        <p style="font-size: larger;">Dr. M. Rama Krishna Murthy</p>
+        <p style="font-size: larger;">Prof. M. Rekha Sundari</p>
+      </div>
+      <div class="mb-4">
+        <h4 class="mb-3 border-bottom pb-3">Publication Chairs</h4>
         <p style="font-size: larger;">Dr. K. S. Deepthi</p>
       </div>
       <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Technical Programme Committee Chairs</h4>
-        ....
-      </div>
-      <div class="mb-4">
+        <p style="font-size: larger;">Dr Noor Zaman Jhanjhi, School of Computer Science Faculty of Innovation and Technology, Taylor’s University, Subang Jaya, Selangor, Malaysia</p>
+        <p style="font-size: larger;">Dr. Karim HAMMOUDI, Université de Haute-Alsace, France        </p>
+
+        <div class="mb-4">
         <h4 class="mb-3 border-bottom pb-3">Publicity Chairs</h4>
-        <p style="font-size: larger;">........</p>
+        <p style="font-size: larger;">Dr. Sandeep Singh Sengar, Cardiff Metropolitan University, UK
+        </p>
+        <p style="font-size: larger;">Dr. D. Baswaraj, Dept. of CSE, Vasavi College of Engineering, Hyderabad, Telangana, India
+        </p>
+        <p style="font-size: larger;">Mr. S Vinay Kumar, Dept. of CSE, Vasavi College of Engineering, Hyderabad, Telangana, India
+        </p>
       </div>
       
   
