--- a/index.html
+++ b/index.html
@@ -44,14 +44,32 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
+  <div class="container">  
+    <div class="row">
+        <div class="anits-logo col-3 d-flex flex-column justify-content-center">
+          <img src="images/clients/anitslogo.jpeg" class="anits-img"/>
+        </div>
+        <div class="conference-text col-6">
+        <h5 class="mt-2 mb-2 heading-conference">6th International Conference on
+          <br>
+          Smart Computing and Informatics
+        </h5>
+        <h4 style="color: rgb(255, 222, 34);">ICSCI 2024</h4>
+        <h5>April 20-21, 2024</h5>
+        <h6>Organized by</h6>
+        <h5>Department of Computer Science and Engineering, <br>Information Technology,<br>Computer Science and Engineering (DS, AI & ML)</h5>
+        </div>
+        <div class="springer-logo-con d-flex flex-column col-3">
+          <img src="images/clients/csi-logo.png" class="springer-logo mt-4"/>  
+          <img src="images/clients/IRC_website_logo.webp" class="springer-logo mb-4 mt-4" />
+          <img src="images/clients/springer.png" class="springer-logo"/>
+          <p class="ml-4 " style="font-size: 15px;">(...Awaiting Approval)</p>
+        </div>
+      </div>
+    </div>
   <nav class="navbar navbar-expand-lg main-nav">
     <div class="container">
-       <h5 class="mt-2 mb-2 left-align">6th International Conference on
-         <br>
-         Smart Computing and Informatics
-       </h5>
-      </a>
-
+ 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class=""><i class="fas fa-bars"></i>
@@ -124,28 +142,49 @@
 
 <!-- Section START-->
 <div class="carousel-div">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114556/maxresdefault_y2vyvi.jpg" class="d-block w-100" alt="...">
+        <img src="images/banner/banner-5.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>ICSCI 2024</h5>
+          <p>Organized by ANITS - Sangivalasa, Visakhapatnam</p>
+          <button class="btn btn-danger">
+            Register Now
+          </button>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="https://res.cloudinary.com/dbtkas8kr/image/upload/v1695114830/rsz_dsc_0268_zw9fny.jpg" class="d-block w-100" alt="...">
+        <img src="images/banner/banner-4.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>ICSCI 2024</h5>
+          <p>Organized by ANITS - Sangivalasa, Visakhapatnam</p>
+          <button class="btn btn-danger">
+            Register Now
+          </button>  
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="..." class="d-block w-100" alt="...">
+        <img src="images/banner/banner-7.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>ICSCI 2024</h5>
+          <p>Organized by ANITS - Sangivalasa, Visakhapatnam</p>
+          <button class="btn btn-danger">
+            Register Now
+          </button>  
+        </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
@@ -170,7 +209,7 @@
 <!-- Section END-->
 
 
-
+<!--
 <section class="overflow-hidden counter-wrapper pt-4 pb-5">
 	<div class="container">
 		<div class="counter-inner">
@@ -187,6 +226,7 @@
 		</div>
 	</div>
 </section>
+-->
 <!-- <section class="section about">
 	<div class="container">
 		<div class="row">
@@ -236,7 +276,7 @@
 </section> -->
 
 <!-- Section START-->
-<section id="section-feature" class="section-bottom" >
+ <!-- <section id="section-feature" class="section-bottom" >
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-8">
@@ -261,18 +301,48 @@
                 </div>
             </div>
             
-            <!-- <div class="col-lg-4 col-md-6">
-                <div class="feature-box mt-3 mt-lg-5">
-                    <i class="fas fa-share-alt"></i>
-                    <h4 class="mt-3 mb-3">Great Community</h4>
-                     <div class="divider"></div>
-                    <p>Networking is the exchange of information and ideas among people with a common profession or special interest, usually in an informal social setting.</p>
-                </div>
-            </div> -->
         </div>
     </div>
-</section>
+</section> -->
 <!-- Section END-->
+<div class="mode-box-container d-flex flex-row justify-content-center">
+  <div class="mode-box">
+    <h4 style="text-decoration: underline;">In Physical Mode</h4>
+    <h3>20,21 April 2024</h3>
+    <h4>Venue: ANITS</h4>
+  </div>
+  <div class="mode-box">
+    <h4 style="text-decoration: underline;">In Online Mode</h4>
+    <h3>20,21 April 2024</h3>
+  </div>
+</div>
+
+<div class="container-fluid feature-box-container">
+  <div class=" feature-box mb-md-3 mt-3" >
+        <i class="fas fa-microphone"></i>
+        <h4 class="mt-3 mb-3">About the Conference</h4>
+        <div class="divider"></div>
+        <p>The aim of the 6th International Conference on Smart Computing and Informatics (ICSCI 2024) is to present a unified platform for advanced and multi-disciplinary research towards the design of smart computing and informatics. The theme is on a broader front focuses on various innovation paradigms in system knowledge, intelligence and sustainability that may be applied to provide realistic solutions to varied problems in society, environment and industries. The scope is also extended towards the deployment of emerging computational and knowledge transfer approaches, optimizing solutions in various disciplines of science, technology and healthcare. The conference proceeding aims the publication of quality and unpublished work.</p>
+  </div>
+</div>
+
+<div class="container-fluid feature-box-container d-flex flex-row">
+  <div class="container feature-box mb-md-3 mt-3">
+    <div>
+    <i class="fas fa-globe"></i>
+      <h4 class="mt-3 mb-3">About the College</h4>
+      <div class="divider"></div>
+      <p>Anil Neerukonda Institute of Technology & Sciences (ANITS) in Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL), a renowned Indian infrastructure company headquartered in Hyderabad. Established in 2001-02 by the Anil Neerukonda Educational Society (ANES), it was founded by Dr. N.B.R. Prasad, an NRI philanthropist, in memory of his son, Anil Neerukonda.
+
+        ANITS, located on a picturesque 12-acre campus in Sangivalasa Village, just 300 meters from the Chennai-Kolkata Highway. It's a convenient 30-minute drive from Visakhapatnam, with city service buses running every 15 minutes for easy access.
+        
+        Under MEIL ownership and Dr. N.B.R. Prasad's visionary leadership, ANITS has grown into a leading educational institution.</p>
+    </div>
+  </div>
+  <div>
+    <img src="images/banner/banner-6.jpg" class="college-img">
+  </div>
+</div>
 
 <section class="section-schedule section-bottom ">
   <div class="container">
@@ -281,7 +351,7 @@
         <div class="heading">
           <span class="stroke-text">Schedule</span>
           <div class="pl-90">
-            <h2 class="mt-2">Important Decisions</h2>
+            <h2 class="mt-2">Important Dates</h2>
             <!-- <p>Accusantium provident suscipit dicta magni dolor deserunt nam obcaecati non veritatis optio.</p> -->
           </div>
         </div>
@@ -718,6 +788,7 @@
 	</div> -->
 </section>
 <!-- Section Start -->
+<!--
 <section class="section sponsors">
     <div class="container">
         <div class="row section-heading">
@@ -733,7 +804,6 @@
 
         <div class="row">
             <div class="col-lg-8">
-                <!-- <h4 class="mb-4 text-white letter-spacing text-sm"></h4> -->
             </div>
             <div class="col-lg-12">
                 <div class="client-item" style="width: 400px; height: 200px;">
@@ -749,7 +819,7 @@
             </div>
         </div>
 
-         <!-- <div class="row mt-5">
+        <div class="row mt-5">
             <div class="col-lg-8">
                 <h4 class="mb-4 text-white mt-5 letter-spacing text-sm">Platinum Sponsors</h4>
             </div>
@@ -783,18 +853,18 @@
                     <a href="#"><img src="images/clients/client-img-5.png" alt="" class="img-fluid"></a>
                 </div>
             </div>
-        </div> -->
+        </div> 
 
-        <!-- <div class="row">
+        <div class="row">
             <div class="col-lg-12">
                 <h5 class="text-white mt-5 mb-4 h3">Want to be a sponsor ? </h5>
                 <a href="#" class="btn btn-hero btn-rounded">apply now</a>
             </div>
-        </div> -->
+        </div>
     </div>
-</section>
+</section> -->
 <!-- Section END -->
-
+<!--
 <section class="cta-2 section">
 	<div class="container">
 		<div class="row">
@@ -813,6 +883,7 @@
 	</div>
 </section>
 <br><br>
+-->
 <!-- <section class="latest-blog section-bottom mt-5 mt-lg-0">
 	<div class="container">
 		 <div class="row section-heading">
