--- a/registration.html
+++ b/registration.html
@@ -44,14 +44,32 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
+  <div class="container">  
+    <div class="row">
+        <div class="anits-logo col-3 d-flex flex-column justify-content-center">
+          <img src="images/clients/anitslogo.jpeg" class="anits-img"/>
+        </div>
+        <div class="conference-text col-6">
+        <h5 class="mt-2 mb-2 heading-conference">6th International Conference on
+          <br>
+          Smart Computing and Informatics
+        </h5>
+        <h4 style="color: rgb(255, 222, 34);">ICSCI 2024</h4>
+        <h5>April 20-21, 2024</h5>
+        <h6>Organized by</h6>
+        <h5>Department of Computer Science and Engineering, <br>Information Technology,<br>Computer Science and Engineering (DS, AI & ML)</h5>
+        </div>
+        <div class="springer-logo-con d-flex flex-column col-3">
+          <img src="images/clients/csi-logo.png" class="springer-logo mt-4"/>  
+          <img src="images/clients/IRC_website_logo.webp" class="springer-logo mb-4 mt-4" />
+          <img src="images/clients/springer.png" class="springer-logo"/>
+          <p class="ml-4 " style="font-size: 15px;">(...Awaiting Approval)</p>
+        </div>
+      </div>
+    </div>
   <nav class="navbar navbar-expand-lg main-nav">
     <div class="container">
-       <h5 class="mt-2 mb-2 left-align">6th International Conference on
-         <br>
-         Smart Computing and Informatics
-       </h5>
-      </a>
-
+ 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
         aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class=""><i class="fas fa-bars"></i>
@@ -171,11 +189,11 @@
                 </tr>
                 <tr>
                 <td>Students &amp; Academicians (from India)</td>
-                <td>₹7,000.00</td>
+                <td>₹8,000.00</td>
                 </tr>
                 <tr>
                 <td>Additional Paper (for one additional paper only)</td>
-                <td>₹4,000.00</td>
+                <td>₹5,000.00</td>
                 </tr>
                 <tr>
                 <td>Co-Author</td>
@@ -197,7 +215,7 @@
     <li>
     2. Extra page length charges would be applicable beyond 10 pages strictly (on Springer Template available on conference website) @ Rs. 1000/- per extra page (@USD 50 or 45 Euros per extra page). You have to make a combined fund transfer in such a case (i.e. Normal Registration + Extra Page Charges).</li>
     <li>
-    3. Additional Paper Registration by the same authors is Rs. 4000/- (150 USD or 120 Euros) for one additional paper only.
+    3. Additional Paper Registration by the same authors is Rs. 5000/- (160 USD or 130 Euros) for one additional paper only.
     </li>
     <li>
     4. Co-Author registration after one full-registration of a paper may be made at Rs. 3000/- (100 USD or 90 Euros).
