--- a/index.html
+++ b/index.html
@@ -44,99 +44,130 @@
  <!-- Navigation Start -->
 
  <header class="header-bar">
-  <div class="container">  
+  <div class="container-fluid">  
     <div class="row">
         <div class="anits-logo col-3 d-flex flex-column justify-content-center">
-          <img src="images/clients/anitslogo.jpeg" class="anits-img"/>
+          <img src="images/clients/anitslogo2.jpg" class="anits-img" style="margin-left: 60px;"/>
         </div>
         <div class="conference-text col-6">
-        <h5 class="mt-2 mb-2 heading-conference">6th International Conference on
+        <h5 class="mt-2 mb-2 heading-conference text-warning text-warning">6th International Conference on
           <br>
           Smart Computing and Informatics
         </h5>
-        <h4 style="color: rgb(255, 222, 34);">ICSCI 2024</h4>
+        <h4>SCI - 2024</h4>
         <h5>April 20-21, 2024</h5>
         <h6>Organized by</h6>
-        <h5>Department of Computer Science and Engineering, <br>Information Technology,<br>Computer Science and Engineering (DS, AI & ML)</h5>
+        <h5 class="text-success">Department of Computer Science and Engineering, <br>Information Technology,<br>Computer Science and Engineering (AI&ML, DS)</h5>
+        <h6 class="text-success">ANITS, Sangivalasa - Visakhapatnam, India</h6>
         </div>
         <div class="springer-logo-con d-flex flex-column col-3">
-          <img src="images/clients/csi-logo.png" class="springer-logo mt-4"/>  
-          <img src="images/clients/IRC_website_logo.webp" class="springer-logo mb-4 mt-4" />
+          <img src="images/clients/IRC_website_logo.webp" class="springer-logo mt-4" />
+          <img src="images/clients/csi-logo.png" class="springer-logo  mb-4 mt-4" style="height: 150;"/>  
           <img src="images/clients/springer.png" class="springer-logo"/>
           <p class="ml-4 " style="font-size: 15px;">(...Awaiting Approval)</p>
         </div>
       </div>
     </div>
-  <nav class="navbar navbar-expand-lg main-nav">
-    <div class="container">
- 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class=""><i class="fas fa-bars"></i>
-        </span>
-      </button>
-
-      <!--  MAIN MENU  -->
-      <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
-        <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-
-          <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             About &darr;
-           </a>
-           <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
-             <a class="dropdown-item" href="college.html">College</a>
-             <a class="dropdown-item" href="department.html">Department</a>
-           </div>
-         </li>
-
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+    <nav class="navbar navbar-expand-lg main-nav">
+      <div class="container-fluid">
+   
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class=""><i class="fas fa-bars"></i>
+          </span>
+        </button>
+  
+        <!--  MAIN MENU  -->
+        <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
+          <ul class="navbar-nav mx-auto">
+            <li class="nav-item">
+              <a class="nav-link text-primary text-primary" href="index.html">Home</a>
+            </li>
+            
+            <li class="nav-item dropdown">
+              <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              For Authors &darr;
+              About &darr;
             </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-              <a class="dropdown-item" href="callforpapers.html">Call for Papers</a>
-              <a class="dropdown-item" href="importantdates.html">Important Dates</a>
-              <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
-              <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
-              <a class="dropdown-item" href="schedule.html">Schedule</a>
-              <a class="dropdown-item" href="registration.html">Registration</a>
-              <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="college.html">College</a>
+              <a class="dropdown-item" href="department.html">Department</a>
             </div>
           </li>
+          
           <li class="nav-item dropdown">
-           <a class="nav-link dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
-             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-             Committees &darr;
-           </a>
-           <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
-             <a class="dropdown-item" href="committee.html">Committees</a>
-             <a class="dropdown-item" href="technical.html">Technical</a>
-             <a class="dropdown-item" href="advisory.html">Advisory</a>
-             <a class="dropdown-item" href="organizing.html">Organizing</a>
-             <!-- <a class="dropdown-item" href="error.html">Regstration</a>
-             <a class="dropdown-item" href="error.html">404 Page</a>
-             <a class="dropdown-item" href="error.html">Supports</a> -->
-           </div>
-         </li>
-         <li class="nav-item">
-           <a class="nav-link" href="sessions.html">Spl. Sessions</a>
-         </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Call for Papers &darr;
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown2">
+              <a class="dropdown-item" href="callforpapers.html">Conference CFP</a>
+              <a class="dropdown-item" href="sessions.html">Special Sessions</a>
+            </div>
           </li>
-        </ul>
-
-        <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="importantdates.html">Important Dates</a>
+          </li>
+  
+          <li class="nav-item dropdown">
+            <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Committees &darr;
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+              <a class="dropdown-item" href="committee.html">Committees</a>
+              <a class="dropdown-item" href="technical.html">Technical</a>
+              <a class="dropdown-item" href="advisory.html">Advisory</a>
+              <a class="dropdown-item" href="organizing.html">Organizing</a>
+              <!-- <a class="dropdown-item" href="error.html">Regstration</a>
+              <a class="dropdown-item" href="error.html">404 Page</a>
+              <a class="dropdown-item" href="error.html">Supports</a> -->
+            </div>
+          </li>
+  
+  
+            <li class="nav-item dropdown">
+              <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                For Authors &darr;
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                <a class="dropdown-item" href="crcinstructions.html">CRC Instructions</a>
+                <a class="dropdown-item" href="submission.html">Submission Guidelines</a>
+                <a class="dropdown-item" href="registration.html">Registration</a>
+                <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+              </div>
+            </li>
+  
+            <li class="nav-item dropdown">
+              <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Program &darr;
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown1">
+                <a class="dropdown-item" href="schedule.html">Program Schedule</a>
+                <a class="dropdown-item" href="presentations.html">Online Presentations</a>
+                <!-- <a class="dropdown-item" href="error.html">Supports</a> -->
+              </div>
+            </li>
+  
+           <li class="nav-item">
+            <a class="nav-link text-primary" href="speakers.html">Speakers</a>
+          </li>
+  
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="importantdates.html">Nearby Attractions</a>
+          </li>
+  
+            <li class="nav-item">
+              <a class="nav-link text-primary" href="contact.html">Contact Us</a>
+            </li>
+          </ul>
+  
+          <!-- <a href="pricing.html" class="btn btn-secondary btn-rounded mt-3 mt-lg-0">Register</a> -->
+        </div>
       </div>
-    </div>
-  </nav>
+    </nav>
 </header>
  <!-- Navigation End -->
 
@@ -152,7 +183,7 @@
       <div class="carousel-item active">
         <img src="images/banner/banner-5.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>ICSCI 2024</h5>
+          <h5>SCI - 2024</h5>
           <p>Organized by ANITS - Sangivalasa, Visakhapatnam</p>
           <button class="btn btn-danger">
             Register Now
@@ -162,23 +193,23 @@
       <div class="carousel-item">
         <img src="images/banner/banner-4.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>ICSCI 2024</h5>
+          <h5>SCI - 2024</h5>
           <p>Organized by ANITS - Sangivalasa, Visakhapatnam</p>
           <button class="btn btn-danger">
             Register Now
           </button>  
         </div>
       </div>
-      <div class="carousel-item">
+      <!--<div class="carousel-item">
         <img src="images/banner/banner-7.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>ICSCI 2024</h5>
+          <h5>SCI - 2024</h5>
           <p>Organized by ANITS - Sangivalasa, Visakhapatnam</p>
           <button class="btn btn-danger">
             Register Now
           </button>  
         </div>
-      </div>
+      </div> -->
     </div>
     <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -306,31 +337,31 @@
 </section> -->
 <!-- Section END-->
 <div class="mode-box-container d-flex flex-row justify-content-center">
-  <div class="mode-box">
+  <div class="mode-box bg-warning">
     <h4 style="text-decoration: underline;">In Physical Mode</h4>
-    <h3>20,21 April 2024</h3>
+    <h3>20 April 2024</h3>
     <h4>Venue: ANITS</h4>
   </div>
-  <div class="mode-box">
+  <div class="mode-box bg-success">
     <h4 style="text-decoration: underline;">In Online Mode</h4>
-    <h3>20,21 April 2024</h3>
+    <h3>21 April 2024</h3>
   </div>
 </div>
 
-<div class="container-fluid feature-box-container">
-  <div class=" feature-box mb-md-3 mt-3" >
+<div class="container-fluid feature-box-container" style="color: black;">
+  <div class=" feature-box mt-3" >
         <i class="fas fa-microphone"></i>
         <h4 class="mt-3 mb-3">About the Conference</h4>
         <div class="divider"></div>
-        <p>The aim of the 6th International Conference on Smart Computing and Informatics (ICSCI 2024) is to present a unified platform for advanced and multi-disciplinary research towards the design of smart computing and informatics. The theme is on a broader front focuses on various innovation paradigms in system knowledge, intelligence and sustainability that may be applied to provide realistic solutions to varied problems in society, environment and industries. The scope is also extended towards the deployment of emerging computational and knowledge transfer approaches, optimizing solutions in various disciplines of science, technology and healthcare. The conference proceeding aims the publication of quality and unpublished work.</p>
+        <p>The aim of the 6th International Conference on Smart Computing and Informatics (SCI - 2024) is to present a unified platform for advanced and multi-disciplinary research towards the design of smart computing and informatics. The theme is on a broader front focuses on various innovation paradigms in system knowledge, intelligence and sustainability that may be applied to provide realistic solutions to varied problems in society, environment and industries. The scope is also extended towards the deployment of emerging computational and knowledge transfer approaches, optimizing solutions in various disciplines of science, technology and healthcare. The conference proceeding aims the publication of quality and unpublished work.</p>
   </div>
 </div>
 
-<div class="container-fluid feature-box-container d-flex flex-row">
+<div class="container-fluid feature-box-container d-flex flex-row" style="background-color: #735aff;">
   <div class="container feature-box mb-md-3 mt-3">
     <div>
     <i class="fas fa-globe"></i>
-      <h4 class="mt-3 mb-3">About the College</h4>
+      <h4 class="mt-3 mb-3 text-danger">About the College</h4>
       <div class="divider"></div>
       <p>Anil Neerukonda Institute of Technology & Sciences (ANITS) in Visakhapatnam is owned by Megha Engineering and Infrastructure Limited (MEIL), a renowned Indian infrastructure company headquartered in Hyderabad. Established in 2001-02 by the Anil Neerukonda Educational Society (ANES), it was founded by Dr. N.B.R. Prasad, an NRI philanthropist, in memory of his son, Anil Neerukonda.
 
@@ -363,19 +394,19 @@
     <div class="row">
       <div class="col-lg-12">
         <nav class="nav nav-pills nav-fill" id="TopicTab" role="tablist">
-          <a class="nav-item nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
+          <a class="nav-item nav-link text-primary active" id="home-tab" data-toggle="tab" href="#home" role="tab"
             aria-controls="home" aria-selected="true">
             <h2>Events</h2>
             <!-- <p>13 Nov ,2019 [09.00am - 04.00pm]</p> -->
           </a>
 
-          <a class="nav-item nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+          <a class="nav-item nav-link text-primary" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
             aria-controls="profile" aria-selected="false">
             <h2>Previous Editions</h2>
             <!-- <p>13 Nov ,2019 [09.00am - 04.00pm]</p> -->
           </a>
 
-          <!-- <a class="nav-item nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab"
+          <!-- <a class="nav-item nav-link text-primary" id="contact-tab" data-toggle="tab" href="#contact" role="tab"
             aria-controls="contact" aria-selected="false">
             <h2>Day 3</h2>
             <p>13 Nov ,2019 [09.00am - 04.00pm]</p>
