--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
         <div class="collapse navbar-collapse text-center" id="navbarNavDropdown">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link text-primary text-primary" href="index.html">Home</a>
+              <a class="nav-link text-primary" href="index.html">Home</a>
             </li>
             
             <li class="nav-item dropdown">
-              <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
+              <a class="nav-link dropdown-toggle text-primary" href="error.html" id="navbarDropdown2" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               About &darr;
             </a>
@@ -96,7 +96,7 @@
           </li>
           
           <li class="nav-item dropdown">
-            <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown2" role="button"
+            <a class="nav-link dropdown-toggle text-primary" href="error.html" id="navbarDropdown2" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Call for Papers &darr;
             </a>
@@ -110,7 +110,7 @@
           </li>
   
           <li class="nav-item dropdown">
-            <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+            <a class="nav-link dropdown-toggle text-primary" href="error.html" id="navbarDropdown1" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Committees &darr;
             </a>
@@ -119,15 +119,13 @@
               <a class="dropdown-item" href="technical.html">Technical</a>
               <a class="dropdown-item" href="advisory.html">Advisory</a>
               <a class="dropdown-item" href="organizing.html">Organizing</a>
-              <!-- <a class="dropdown-item" href="error.html">Regstration</a>
-              <a class="dropdown-item" href="error.html">404 Page</a>
-              <a class="dropdown-item" href="error.html">Supports</a> -->
+
             </div>
           </li>
   
   
             <li class="nav-item dropdown">
-              <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              <a class="nav-link dropdown-toggle text-primary" href="error.html" id="navbarDropdown1" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 For Authors &darr;
               </a>
@@ -140,7 +138,7 @@
             </li>
   
             <li class="nav-item dropdown">
-              <a class="nav-link text-primary dropdown-toggle" href="error.html" id="navbarDropdown1" role="button"
+              <a class="nav-link dropdown-toggle text-primary" href="error.html" id="navbarDropdown1" role="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Program &darr;
               </a>
@@ -177,7 +175,6 @@
     <ol class="carousel-indicators">
       <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
-      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
