--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           </li>
   
           <li class="nav-item">
-            <a class="nav-link text-primary" href="importantdates.html">Nearby Attractions</a>
+            <a class="nav-link text-primary" href="nearbyattractions.html">Nearby Attractions</a>
           </li>
   
             <li class="nav-item">
